--- a/index.html
+++ b/index.html
@@ -1,303 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Harsh Online Shop – Khamtara</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Harsha App</title>
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#000000"/>
-  <link rel="icon" href="assets/icon-192.png" type="image/png"/>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="theme-color" content="#ff8800">
   <style>
-    .tab-btn[aria-selected="true"]{ @apply bg-black text-white; }
+    body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+    h1 { color: #ff8800; }
   </style>
 </head>
-<body class="min-h-screen bg-gradient-to-b from-gray-50 to-white text-gray-800">
-  <header class="sticky top-0 z-30 backdrop-blur bg-white/80 border-b">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center gap-3">
-      <div class="flex items-center gap-3">
-        <div class="w-10 h-10 rounded-2xl bg-black text-white grid place-items-center font-bold">H</div>
-        <div>
-          <h1 class="text-xl font-bold leading-tight">Harsh Online Shop</h1>
-          <p class="text-xs text-gray-500">Indian Bank ke baju, Khamtara • Ph: <a class="underline" href="tel:+917722915520">7722915520</a></p>
-        </div>
-      </div>
-      <div class="ml-auto flex items-center gap-2">
-        <a href="tel:+917722915520" class="px-3 py-1.5 rounded-xl border text-sm flex items-center gap-2">📞 Call Now</a>
-        <a href="https://www.google.com/maps/search/Indian+Bank,+Khamtara" target="_blank" class="px-3 py-1.5 rounded-xl border text-sm flex items-center gap-2">📍 Find on Maps</a>
-        <button id="shareBtn" class="px-3 py-1.5 rounded-xl border text-sm flex items-center gap-2">🔗 Share App</button>
-        <button id="editBtn" class="px-3 py-1.5 rounded-xl border text-sm flex items-center gap-2">✏️ Edit Mode</button>
-      </div>
-    </div>
-  </header>
+<body>
+  <h1>Welcome to Harsha App</h1>
+  <p>This is my Progressive Web App!</p>
 
-  <main class="max-w-6xl mx-auto px-4 py-6">
-    <div class="grid gap-4 md:grid-cols-3">
-      <section class="md:col-span-2 order-2 md:order-1 bg-white rounded-2xl border">
-        <div class="p-4 border-b">
-          <div class="flex items-center gap-3">
-            <span class="text-gray-500">🔎</span>
-            <input id="search" class="flex-1 px-3 py-2 rounded-xl border" placeholder="Search (Aadhaar, SSC, Admit Card)"/>
-          </div>
-          <div class="flex flex-wrap gap-2 pt-3" id="chips"></div>
-        </div>
-
-        <div class="p-4">
-          <div class="grid grid-cols-3 gap-2 mb-4">
-            <button class="tab-btn px-3 py-2 rounded-xl border" data-tab="services" aria-selected="true">Digital Seva</button>
-            <button class="tab-btn px-3 py-2 rounded-xl border" data-tab="vacancies">Gov Vacancies</button>
-            <button class="tab-btn px-3 py-2 rounded-xl border" data-tab="forms">Forms & Results</button>
-          </div>
-          <div id="list" class="space-y-4"></div>
-        </div>
-      </section>
-
-      <aside class="order-1 md:order-2 grid gap-4">
-        <div class="bg-white rounded-2xl border">
-          <div class="p-4 border-b"><h2 class="text-base font-semibold">About</h2></div>
-          <div class="p-4 text-sm text-gray-600 space-y-2">
-            <p>ℹ️ Harsh Online Shop – aapka apna digital seva kendra. Document print, online form, admit card, results, recharge, ticket booking – sab yahin.</p>
-            <p>📍 Location: <strong>Indian Bank ke baju, Khamtara</strong></p>
-            <p>📞 Contact: <a class="underline" href="tel:+917722915520">7722915520</a></p>
-          </div>
-        </div>
-
-        <div class="bg-white rounded-2xl border">
-          <div class="p-4 border-b"><h2 class="text-base font-semibold">How to Add/Update Items</h2></div>
-          <div class="p-4 text-sm text-gray-600 space-y-2">
-            <ol class="list-decimal pl-5 space-y-1">
-              <li>Top-right par <b>Edit Mode</b> dabao.</li>
-              <li><b>Add New</b> se Service/Vacancy/Form add karo.</li>
-              <li>Card par click karke fields update karo. Sab localStorage me save ho jayega.</li>
-            </ol>
-            <p class="text-xs text-gray-500">Note: Official updates ke liye hamesha original website check karein.</p>
-          </div>
-        </div>
-      </aside>
-    </div>
-  </main>
-
-  <footer class="max-w-6xl mx-auto px-4 py-10 text-center text-xs text-gray-500">
-    © <span id="year"></span> Harsh Online Shop, Khamtara • Built with ❤️ for local digital services.
-  </footer>
-
-<script>
-const LS_KEY = "harsh-online-app-data-v1";
-const defaultData = {
-  services: [
-    { id: "sv1", title: "Aadhaar Update / Download", subtitle: "UIDAI", link: "https://myaadhaar.uidai.gov.in/", note: "Aadhaar Seva: update, download, PVC order", tags: ["aadhaar","update","download"] },
-    { id: "sv2", title: "PAN Apply / e-PAN Download", subtitle: "NSDL", link: "https://www.onlineservices.nsdl.com/paam/endUserRegisterContact.html", note: "New PAN, corrections, e-PAN", tags: ["pan","income tax"] },
-    { id: "sv3", title: "DigiLocker", subtitle: "Digital Documents", link: "https://www.digilocker.gov.in/", note: "Secure docs: Aadhaar, DL, RC", tags: ["digilocker","documents"] },
-    { id: "sv4", title: "Income Tax e-Filing", subtitle: "ITR / e-Verify", link: "https://www.incometax.gov.in/iec/foportal/", note: "ITR filing, status, PAN-Aadhaar link", tags: ["itr","tax"] },
-    { id: "sv5", title: "Passport Seva", subtitle: "MEA", link: "https://www.passportindia.gov.in/", note: "Passport apply, appointment", tags: ["passport"] },
-    { id: "sv6", title: "Rail Ticket Booking", subtitle: "IRCTC", link: "https://www.irctc.co.in/", note: "Rail tickets, PNR status", tags: ["rail","ticket"] },
-    { id: "sv7", title: "CSC / Government Portals", subtitle: "Common Services", link: "https://csc.gov.in/", note: "Citizen services & schemes", tags: ["csc","seva"] },
-    { id: "sv8", title: "Mobile Recharge & DTH", subtitle: "Payments", link: "https://paytm.com/", note: "Recharge, bill payments", tags: ["recharge","bill"] }
-  ],
-  vacancies: [
-    { id: "vc1", title: "SSC (Combined Exams)", subtitle: "Staff Selection Commission", link: "https://ssc.gov.in/", status: "Open / Rolling", tags: ["ssc","gov job"] },
-    { id: "vc2", title: "UPSC Vacancies", subtitle: "Union Public Service Commission", link: "https://www.upsc.gov.in/", status: "As per calendar", tags: ["upsc","gov job"] },
-    { id: "vc3", title: "Railway Recruitment (RRB)", subtitle: "Indian Railways", link: "https://www.rrbcdg.gov.in/", status: "Check notifications", tags: ["rrb","railway"] },
-    { id: "vc4", title: "Banking Jobs (IBPS)", subtitle: "IBPS / SBI / RBI", link: "https://www.ibps.in/", status: "Seasonal", tags: ["bank","ibps"] },
-    { id: "vc5", title: "Police / Defence (CAPF)", subtitle: "CAPF / State Police", link: "https://rectt.bsf.gov.in/", status: "Varies", tags: ["police","defence"] }
-  ],
-  forms: [
-    { id: "fm1", title: "Admit Card", subtitle: "Various Boards", link: "https://admitcard.link/", note: "Use official board portal", tags: ["admit card"] },
-    { id: "fm2", title: "Result – Sarkari Result", subtitle: "Multiple", link: "https://www.sarkariresult.com/", note: "Cross-check with official site", tags: ["result"] },
-    { id: "fm3", title: "Scholarships – NSP", subtitle: "National Scholarship Portal", link: "https://scholarships.gov.in/", note: "Fresh/Renewal", tags: ["scholarship"] }
-  ]
-};
-
-function saveData(data){ localStorage.setItem(LS_KEY, JSON.stringify(data)); }
-function loadData(){
-  try { return JSON.parse(localStorage.getItem(LS_KEY)) || defaultData; } catch(e){ return defaultData; }
-}
-
-let state = { tab: 'services', q: '', edit: false, data: loadData() };
-
-const chips = ["Aadhaar","PAN","Passport","UPSC","SSC","RRB","Result","Admit Card"];
-
-function renderChips(){
-  const box = document.getElementById('chips');
-  box.innerHTML='';
-  chips.forEach(t => {
-    const b = document.createElement('button');
-    b.className="px-2 py-1 rounded-xl border text-xs";
-    b.textContent=t;
-    b.onclick=()=>{ state.q = t; document.getElementById('search').value=t; render(); };
-    box.appendChild(b);
-  });
-}
-
-function filterItems(arr){
-  const q = state.q.trim().toLowerCase();
-  if(!q) return arr;
-  return arr.filter(it => [it.title,it.subtitle,it.note,it.status, ...(it.tags||[])].filter(Boolean).some(x => (''+x).toLowerCase().includes(q)));
-}
-
-function card(it, badgeKey){
-  const wrap = document.createElement('div');
-  wrap.className="border rounded-2xl p-4 bg-white";
-  const title = document.createElement('div');
-  title.className="flex items-start gap-3";
-  title.innerHTML = `<div class="mt-0.5">🔗</div>
-    <div class="flex-1 min-w-0">
-      <div class="font-semibold leading-tight truncate">${it.title||''}</div>
-      <div class="text-xs text-gray-500 truncate">${it.subtitle||''}</div>
-    </div>
-    ${badgeKey && it[badgeKey] ? `<span class="text-xs px-2 py-0.5 rounded-full bg-gray-900 text-white">${it[badgeKey]}</span>`:''}`;
-  wrap.appendChild(title);
-
-  if(it.note){
-    const p = document.createElement('p');
-    p.className="text-sm text-gray-600 mt-2";
-    p.textContent=it.note;
-    wrap.appendChild(p);
-  }
-
-  const buttons = document.createElement('div');
-  buttons.className="flex gap-2 mt-3";
-  const open = document.createElement('a');
-  open.href = it.link || '#';
-  open.target = "_blank";
-  open.rel = "noreferrer";
-  open.className="flex-1 text-center px-3 py-2 rounded-xl bg-black text-white";
-  open.textContent = "Open Link";
-  buttons.appendChild(open);
-
-  if(state.edit){
-    const edit = document.createElement('button');
-    edit.className="px-3 py-2 rounded-xl border";
-    edit.textContent="Edit";
-    edit.onclick = () => openEditor(it);
-    buttons.appendChild(edit);
-
-    const del = document.createElement('button');
-    del.className="px-3 py-2 rounded-xl border text-red-600";
-    del.textContent="Delete";
-    del.onclick = () => {
-      const group = state.tab;
-      state.data[group] = state.data[group].filter(x => x.id !== it.id);
-      saveData(state.data); render();
-    };
-    wrap.appendChild(document.createElement('div')).className="mt-2";
-    wrap.appendChild(buttons);
-  } else {
-    wrap.appendChild(buttons);
-  }
-
-  return wrap;
-}
-
-function openEditor(item){
-  const group = state.tab;
-  const isNew = !item || !item.id;
-  const draft = Object.assign({title:'',subtitle:'',link:'',note:'',status:'',tags:[]}, item||{});
-
-  const overlay = document.createElement('div');
-  overlay.className="fixed inset-0 bg-black/40 grid place-items-center p-4 z-50";
-  const modal = document.createElement('div');
-  modal.className="bg-white w-full max-w-lg rounded-2xl shadow-2xl p-4";
-  modal.innerHTML = `
-    <div class="flex items-center justify-between pb-2 border-b">
-      <h3 class="font-semibold">${isNew? 'Add Item':'Edit Item'}</h3>
-      <button id="xbtn" class="p-2">✖</button>
-    </div>
-    <div class="grid gap-3 pt-3">
-      ${inputRow('Title','title',draft.title)}
-      ${inputRow('Subtitle / Board','subtitle',draft.subtitle||'')}
-      ${inputRow('Official Link','link',draft.link||'')}
-      ${inputRow('Note (optional)','note',draft.note||'')}
-      ${inputRow('Status (for vacancies)','status',draft.status||'')}
-      ${inputRow('Tags (comma separated)','tags',(draft.tags||[]).join(', '))}
-    </div>
-    <div class="flex justify-end gap-2 pt-4">
-      <button id="cancel" class="px-3 py-2 rounded-xl border">Cancel</button>
-      <button id="save" class="px-3 py-2 rounded-xl bg-black text-white">Save</button>
-    </div>
-  `;
-  overlay.appendChild(modal);
-  document.body.appendChild(overlay);
-
-  function val(id){ return modal.querySelector('#'+id).value; }
-
-  modal.querySelector('#xbtn').onclick = () => overlay.remove();
-  modal.querySelector('#cancel').onclick = () => overlay.remove();
-  modal.querySelector('#save').onclick = () => {
-    draft.title = val('title');
-    draft.subtitle = val('subtitle');
-    draft.link = val('link');
-    draft.note = val('note');
-    draft.status = val('status');
-    draft.tags = val('tags').split(',').map(s=>s.trim()).filter(Boolean);
-    if(isNew){ draft.id = (group.slice(0,2)) + Date.now(); state.data[group].push(draft); }
-    else { state.data[group] = state.data[group].map(x => x.id===draft.id ? draft : x); }
-    saveData(state.data); overlay.remove(); render();
-  };
-}
-
-function inputRow(label, id, value){
-  return `<label class="grid gap-1">
-    <span class="text-xs text-gray-500">${label}</span>
-    <input id="${id}" class="px-3 py-2 rounded-xl border" value="${(value||'').replace(/"/g,'&quot;')}" />
-  </label>`;
-}
-
-function render(){
-  document.getElementById('year').textContent = new Date().getFullYear();
-  renderChips();
-  const list = document.getElementById('list');
-  list.innerHTML='';
-
-  const tabs = document.querySelectorAll('.tab-btn');
-  tabs.forEach(b => b.setAttribute('aria-selected', b.dataset.tab === state.tab ? 'true':'false'));
-  tabs.forEach(b => b.onclick = () => { state.tab = b.dataset.tab; render(); });
-
-  const group = state.tab;
-  const items = filterItems(state.data[group]);
-  // If edit mode, show add new button
-  if(state.edit){
-    const tools = document.createElement('div');
-    tools.className="flex items-center gap-2 mb-2";
-    const add = document.createElement('button');
-    add.className="px-3 py-2 rounded-xl bg-black text-white";
-    add.textContent = "➕ Add New";
-    add.onclick = () => openEditor(null);
-    const badge = document.createElement('span');
-    badge.className="ml-2 px-2 py-1 rounded-full border text-xs";
-    badge.textContent="Local admin • autosave";
-    tools.appendChild(add); tools.appendChild(badge);
-    list.appendChild(tools);
-  }
-
-  const grid = document.createElement('div');
-  grid.className="grid gap-3 sm:grid-cols-2 lg:grid-cols-3";
-  items.forEach(it => grid.appendChild(card(it, group==='vacancies' ? 'status' : null)));
-  list.appendChild(grid);
-}
-
-// Events
-document.getElementById('search').addEventListener('input', (e)=>{ state.q = e.target.value; render(); });
-document.getElementById('shareBtn').addEventListener('click', async ()=>{
-  const url = location.href;
-  const text = `Harsh Online Shop – sabhi digital seva ek jagah. Location: Indian Bank ke baju, Khamtara. ${url}`;
-  if(navigator.share){ try{ await navigator.share({title: "Harsh Online Shop", text, url}); }catch(e){} }
-  else { await navigator.clipboard.writeText(text); alert("Link copied to clipboard!"); }
-});
-document.getElementById('editBtn').addEventListener('click', ()=>{
-  state.edit = !state.edit;
-  document.getElementById('editBtn').textContent = state.edit ? '❌ Close Edit' : '✏️ Edit Mode';
-  render();
-});
-
-// Register service worker
-if('serviceWorker' in navigator){
-  window.addEventListener('load', ()=>{
-    navigator.serviceWorker.register('service-worker.js').catch(console.error);
-  });
-}
-
-render();
-</script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log("Service Worker Registered"));
+    }
+  </script>
 </body>
 </html>
